found the issue for the invisible conditions
I keep using opacity % - should be ".x"

--- a/src/conditions.css
+++ b/src/conditions.css
@@ -1,5 +1,5 @@
 .conditions {
-  opacity: 75%;
+  opacity: 0.7;
   margin-left: 32px;
   margin-right: 8px;
 }
